fix: language toggle spacing

--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -4,7 +4,6 @@
 	flex-direction: column;
 	height: 100%;
 	justify-content: space-evenly;
-	position: relative;
 }
 
 button {
@@ -45,7 +44,7 @@ time {
 }
 .language {
 	position: absolute;
-	top: 10px;
+	top: 70px;
 	right: 10px;
 	width: 10%;
 }
